--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,24 @@
 /* ================= COMMON STYLES =================*/
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
 ul {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
   list-style-type: none;
 }
 
+img {
+  display: block;
+}
 a {
   color: inherit;
   text-decoration: none;
@@ -16,6 +32,23 @@ body {
   font-family: 'Roboto', sans-serif;
   color: #434455;
   background-color: #ffffff;
+}
+
+.container {
+  max-width: 1158px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.section-title {
+  margin-bottom: 72px;
+}
+
+.section {
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
 /* ================= HEADER STYLES ================= */
 
@@ -34,11 +67,17 @@ body {
 }
 
 .menu-link {
+  display: block;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
+
+.menu-item {
 }
 
 .menu-link:hover,
@@ -49,6 +88,9 @@ body {
   font-style: normal;
 }
 .contact-link {
+  display: block;
+  padding-top: 24px;
+  padding-bottom: 24px;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -58,9 +100,35 @@ body {
 .contact-link:focus {
   color: #404bbf;
 }
+
+.page-header-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid #e7e9fc;
+}
+
+.page-nav {
+  display: flex;
+  align-items: center;
+  gap: 76px;
+}
+
+.menu {
+  display: flex;
+  gap: 40px;
+}
+
+.contacts-list {
+  display: flex;
+  gap: 40px;
+}
 /* ================= HERO STYLES ================= */
 .hero-section {
   background-color: #2e2f42;
+  max-width: 1440px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .main-title {
@@ -70,6 +138,8 @@ body {
   letter-spacing: 0.02em;
   text-align: center;
   color: #fff;
+  margin-bottom: 48px;
+  max-width: 496px;
 }
 
 .order-button {
@@ -79,6 +149,13 @@ body {
   line-height: 1.5;
   letter-spacing: 0.04em;
   color: #fff;
+  border: none;
+  padding: 16px 32px;
+  border-radius: 4px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  min-width: 169px;
 }
 
 .order-button:hover,
@@ -86,6 +163,12 @@ body {
   background-color: #404bbf;
 }
 
+.hero-container {
+  padding-top: 188px;
+  padding-bottom: 188px;
+  padding-left: 331px;
+  padding-right: 331px;
+}
 /* ================= BENEFITS STYLES ================= */
 
 .benefits-item-title {
@@ -94,6 +177,7 @@ body {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  margin-bottom: 8px;
 }
 
 .benefits-item-text {
@@ -102,10 +186,30 @@ body {
   letter-spacing: 0.02em;
 }
 
+.benefits-list {
+  display: flex;
+  justify-content: space-between;
+}
+
+.benefits-title {
+  visibility: hidden;
+}
+
+.benefits-section {
+  padding-top: 120px;
+}
+
+.benefits-item {
+  width: calc((100% - 72px) / 4);
+}
+
 /* ================= TEAM STYLES ======================= */
 
 .team-section {
   background-color: #f4f4fd;
+  max-width: 1440px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .team-title {
@@ -120,6 +224,11 @@ body {
 
 .team-list-item {
   background-color: #ffffff;
+  width: calc((100% - 72px) / 4);
+  border-radius: 0 0 4px 4px;
+  padding: 0px 0px 32px 0px;
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
 .team-name {
@@ -129,6 +238,8 @@ body {
   letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
+  margin-top: 32px;
+  margin-bottom: 8px;
 }
 
 .team-position {
@@ -136,6 +247,11 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
   text-align: center;
+}
+
+.team-list {
+  display: flex;
+  justify-content: space-between;
 }
 
 /* ================= PORTFOLIO STYLES ======================= */
@@ -156,17 +272,36 @@ body {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  margin-top: 32px;
+  margin-bottom: 8px;
 }
 
 .portfolio-list-text {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  padding-bottom: 32px;
 }
 
+.portfolio-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.portfolio-list-item {
+  width: calc((100% - 48px) / 3);
+}
+
+.portfolio-list-item:not(:nth-child(n + 3)) {
+  margin-bottom: 48px;
+}
 /* ================= FOOTER STYLES ========================= */
 .page-footer {
   background-color: #2e2f42;
+  max-width: 1440px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .footer-text {
@@ -174,8 +309,19 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
+  max-width: 264px;
 }
 
 .footer-logo-color {
   color: #f4f4fd;
+  max-width: 264px;
+}
+
+.footer-container {
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
+.footer-text {
+  margin-top: 16px;
 }
