--- a/css/styles.css
+++ b/css/styles.css
@@ -274,6 +274,7 @@ body {
   color: #2e2f42;
   margin-top: 32px;
   margin-bottom: 8px;
+  padding-left: 8px;
 }
 
 .portfolio-list-text {
@@ -281,6 +282,7 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
   padding-bottom: 32px;
+  padding-left: 8px;
 }
 
 .portfolio-list {
@@ -291,9 +293,10 @@ body {
 
 .portfolio-list-item {
   width: calc((100% - 48px) / 3);
+  border: 1px solid #e7e9fc;
 }
 
-.portfolio-list-item:not(:nth-child(n + 3)) {
+.portfolio-list-item:not(:nth-child(n + 4)) {
   margin-bottom: 48px;
 }
 /* ================= FOOTER STYLES ========================= */
