--- a/css/styles.css
+++ b/css/styles.css
@@ -52,6 +52,9 @@ body {
 }
 /* ================= HEADER STYLES ================= */
 
+.page-header {
+  border-bottom: 1px solid #e7e9fc;
+}
 .logo {
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
@@ -60,6 +63,7 @@ body {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
+  margin-right: 76px;
 }
 
 .logo-color {
@@ -105,7 +109,6 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-bottom: 1px solid #e7e9fc;
 }
 
 .page-nav {
@@ -129,6 +132,7 @@ body {
   max-width: 1440px;
   margin-left: auto;
   margin-right: auto;
+  padding: 188px 0;
 }
 
 .main-title {
@@ -164,8 +168,6 @@ body {
 }
 
 .hero-container {
-  padding-top: 188px;
-  padding-bottom: 188px;
   padding-left: 331px;
   padding-right: 331px;
 }
@@ -180,6 +182,20 @@ body {
   margin-bottom: 8px;
 }
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 .benefits-item-text {
   font-size: 16px;
   line-height: 1.5;
@@ -189,10 +205,7 @@ body {
 .benefits-list {
   display: flex;
   justify-content: space-between;
-}
-
-.benefits-title {
-  visibility: hidden;
+  gap: 24px;
 }
 
 .benefits-section {
@@ -252,8 +265,12 @@ body {
 .team-list {
   display: flex;
   justify-content: space-between;
+  gap: 24px;
 }
 
+.team-container {
+  padding: 32px 0;
+}
 /* ================= PORTFOLIO STYLES ======================= */
 
 .portfolio-title {
@@ -273,31 +290,34 @@ body {
   letter-spacing: 0.02em;
   color: #2e2f42;
   margin-top: 32px;
-  margin-bottom: 8px;
-  padding-left: 8px;
 }
 
 .portfolio-list-text {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  padding-bottom: 32px;
-  padding-left: 8px;
 }
 
 .portfolio-list {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  column-gap: 24px;
 }
 
 .portfolio-list-item {
   width: calc((100% - 48px) / 3);
-  border: 1px solid #e7e9fc;
 }
 
 .portfolio-list-item:not(:nth-child(n + 4)) {
   margin-bottom: 48px;
+}
+
+.category-container {
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
+  margin-bottom: 8px;
 }
 /* ================= FOOTER STYLES ========================= */
 .page-footer {
@@ -305,6 +325,7 @@ body {
   max-width: 1440px;
   margin-left: auto;
   margin-right: auto;
+  padding: 100px 0;
 }
 
 .footer-text {
@@ -319,12 +340,7 @@ body {
   color: #f4f4fd;
   max-width: 264px;
 }
-
-.footer-container {
-  padding-top: 100px;
-  padding-bottom: 100px;
-}
-
-.footer-text {
-  margin-top: 16px;
+.footer-logo {
+  display: inline-block;
+  margin-bottom: 16px;
 }
